# summarize

./: README.md  pyproject.toml
input/: demo.csv
output/: perplexity-summary-demo.csv
summarize/: main.py
