[project]
name = "summarize"
version = "0.1.0"
description = ""
authors = [
    { name = "simon-lentz", email = "slentz445@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]

[project.scripts]
summarize = "summarize.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"